    1 = standard (like in moin <= 1.9.7) [default]
    2 = extended (add infos about username, wikiname, url)
  * add a tool to output the contents of the event-log to CSV:
    moin export eventlog --file=output.csv
    Output encoding is utf-8, columns are in this order:
    time, event, username, ip, wikiname, pagename, url, referrer, ua
    time: UNIX timestamp (float)

  Fixes:
  * do not create empty pagedirs (with empty edit-log). To clean up all the
    trash pagedirs, use moin ... maint cleanpage.
  * AttachFile do=get and do=view: send 404 status if file does not exist
  * link rel="Alternate" links: rather use page.url than request.href, so
    url_prefix_action gets used for the (print and raw) action URLs
  * fixed wrong detection of UI language from accept-language header for not
    logged-in users if the language identifier there was (partially) uppercase.


Version 1.9.7:
  New features:
  * passlib support - enhanced password hash security. Special thanks go to
    the Python Software Foundation (PSF) for sponsoring development of this!

    Docs for passlib: http://packages.python.org/passlib/

    If cfg.passlib_support is True (default), we try to import passlib and set
    it up using the configuration given in cfg.passlib_crypt_context (default
    is to use sha512_crypt with default configuration from passlib).

    The passlib docs recommend 3 hashing schemes that have good security, but
    some of them have additional requirements:
    sha512_crypt needs passlib >= 1.3.0, no other requirements.
    pbkdf2_sha512 needs passlib >= 1.4.0, no other requirements.
    bcrypt has additional binary/compiled package requirements, please refer to
    the passlib docs.

    cfg.password_scheme should be '{PASSLIB}' (default) to tell that passlib is
    wanted for new password hash creation and also for upgrading existing
    password hashes.

    For the moin code as distributed in our download release archive, passlib